@startuml model to build pdf from markdown
package core {
  package book {
    class Book {
      id: string
      path: string
    }
    class Section {
      title: string
      index: number
    }

    Book o-r-> "n" Section

    interface BookShelf {
      find(id: string): Book
    }
    BookShelf ..> Book : build
  }

  package serializer {
    interface Serializer {
      with(decorat:r SerializerDecorator): Serializer
      serialize(book: Book): Promise<string>
    }
    Serializer .u.> Book : serialize

    package kind {
      CatSerializer .u.|> Serializer
    }

    package decorator {
      interface SerializerDecorator {
        decorate(serialized: string): string
      }

      ReplaceMetaTitleToHeader .u.|> SerializerDecorator
      WithoutMetaData .u.|> SerializerDecorator
    }
    Serializer ..> SerializerDecorator

  }

  package conversion {
    interface Converter {
      convert(book: Book, outPath: string)
    }
    Converter ..> Book : convert

    class ConvertBook << service >>
    ConvertBook ..> Converter : convert serialized book
    ConvertBook ..> BookShelf : use to get book

    package converter {
      class PDFConverter
      PDFConverter .u.|> Converter
    }
  }
}

package app {
  package zenn {
    class ZennBookShelf
    ZennBookShelf .u.|> BookShelf

    class ZennBookConfig {
      chapters: string[]
    }
    ZennBookShelf ..> ZennBookConfig : use
  }
}

package cli {
  class CliArgument {
    src: string
    out: string
  }

  class CliConversionProcess
  CliConversionProcess -r-> CliArgument : use to build objects
}

cli ..> core
@enduml
